# mnist-ingestion-pipeline

./: .gitignore  Makefile  README.md  pipeline.py  pyproject.toml  requirements.txt  schema.sql
data/landing/batch_demo/: metadata.csv
scripts/: generate_mnist_batches.py  prepare_sample_batch.py  query_catalog.py  run_demo.sh  run_pipeline.py
src/mnist_ingestion/: config.py  db.py  metadata.py  pipeline.py  storage.py  validation.py
tests/: test_hashing.py  test_pipeline.py  test_validation.py
