[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-ingestion-pipeline"
version = "0.2.0"
description = "Time-boxed MNIST-style image ingestion pipeline with validation, lineage and SQLite catalogue"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-v --tb=short -ra"

[tool.setuptools.packages.find]
where = ["src"]
